--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=5000
 
-#spring.datasource.url = jdbc:mysql://localhost:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
-#spring.datasource.username = root
-#spring.datasource.password = root
-spring.datasource.url = jdbc:mysql://aagpv7jjakutzi.co4sfgsv7sfr.us-east-2.rds.amazonaws.com:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
+spring.datasource.url = jdbc:mysql://localhost:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username = root
-spring.datasource.password = 6TnG6qcDtJK4Wjb
+spring.datasource.password = root
+#spring.datasource.url = jdbc:mysql://aagpv7jjakutzi.co4sfgsv7sfr.us-east-2.rds.amazonaws.com:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
+#spring.datasource.username = root
+#spring.datasource.password = 6TnG6qcDtJK4Wjb
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
