--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 server.port=5000
 
-spring.datasource.url = jdbc:mysql://localhost:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
-spring.datasource.username = root
-spring.datasource.password = root
+
+flyway.user=root
+flyway.password=root
+flyway.schemas=timesheet
+flyway.url=jdbc:h2:mem:DATABASE
+flyway.locations=filesystem:db/migration
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+#spring.datasource.url = jdbc:mysql://localhost:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
+#spring.datasource.username = root
+#spring.datasource.password = root
 #spring.datasource.url = jdbc:mysql://aagpv7jjakutzi.co4sfgsv7sfr.us-east-2.rds.amazonaws.com:3306/timesheet?useSSL=false&serverTimezone=Asia/Singapore
 #spring.datasource.username = root
 #spring.datasource.password = 6TnG6qcDtJK4Wjb
@@ -12,8 +20,8 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
